feat: dockerfile and main entrypoints for http proxy and grpc server
