# doc/swagger/shortener.swagger.json
@@ -16,7 +16,7 @@
     "application/json"
   ],
   "paths": {
-    "/url": {
+    "/v1/url": {
       "post": {
         "operationId": "Shortener_PostUrl",
         "responses": {
@@ -48,7 +48,7 @@
         ]
       }
     },
-    "/url/{shortUrl}": {
+    "/v1/url/{shortUrl}": {
       "get": {
         "operationId": "Shortener_GetUrl",
         "responses": {
