# pb/shortener.pb.gw.go
@@ -131,7 +131,7 @@ func RegisterShortenerHandlerServer(ctx context.Context, mux *runtime.ServeMux, 
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/shortener.Shortener/PostUrl", runtime.WithHTTPPathPattern("/url"))
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/shortener.Shortener/PostUrl", runtime.WithHTTPPathPattern("/v1/url"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -156,7 +156,7 @@ func RegisterShortenerHandlerServer(ctx context.Context, mux *runtime.ServeMux, 
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/shortener.Shortener/GetUrl", runtime.WithHTTPPathPattern("/url/{shortUrl}"))
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/shortener.Shortener/GetUrl", runtime.WithHTTPPathPattern("/v1/url/{shortUrl}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -220,7 +220,7 @@ func RegisterShortenerHandlerClient(ctx context.Context, mux *runtime.ServeMux, 
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/shortener.Shortener/PostUrl", runtime.WithHTTPPathPattern("/url"))
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/shortener.Shortener/PostUrl", runtime.WithHTTPPathPattern("/v1/url"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -242,7 +242,7 @@ func RegisterShortenerHandlerClient(ctx context.Context, mux *runtime.ServeMux, 
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/shortener.Shortener/GetUrl", runtime.WithHTTPPathPattern("/url/{shortUrl}"))
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/shortener.Shortener/GetUrl", runtime.WithHTTPPathPattern("/v1/url/{shortUrl}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -262,9 +262,9 @@ func RegisterShortenerHandlerClient(ctx context.Context, mux *runtime.ServeMux, 
 }
 
 var (
-	pattern_Shortener_PostUrl_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"url"}, ""))
+	pattern_Shortener_PostUrl_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "url"}, ""))
 
-	pattern_Shortener_GetUrl_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1}, []string{"url", "shortUrl"}, ""))
+	pattern_Shortener_GetUrl_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "url", "shortUrl"}, ""))
 )
 
 var (
